<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/prefs_category_display">

        <SwitchPreferenceCompat
            app:key="tema"
            app:title="@string/prefs_theme"
            app:defaultValue="true"/>

        <ListPreference
            app:key="fuente"
            app:title="@string/prefs_font_size"
            app:entries="@array/fuente_entries"
            app:entryValues="@array/fuente_values"
            app:defaultValue="2"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/prefs_category_sorting">

        <ListPreference
            app:key="criterio"
            app:title="@string/prefs_sort_criteria"
            app:entries="@array/criterio_entries"
            app:entryValues="@array/criterio_values"
            app:defaultValue="2"/>

        <SwitchPreferenceCompat
            app:key="orden"
            app:title="@string/prefs_sort_order"
            app:defaultValue="true"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/prefs_category_storage">

        <CheckBoxPreference
            app:key="sd"
            app:title="@string/prefs_save_in_sd"
            app:summaryOn="@string/prefs_save_in_sd_summary_on"
            app:summaryOff="@string/prefs_save_in_sd_summary_off"
            app:defaultValue="false"/>
    </PreferenceCategory>

</PreferenceScreen>
