<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <group android:id="@+id/it_groupIconos">
        <item
            android:id="@+id/it_addTarea"
            android:icon="@drawable/add_task_24dp_e3e3e3_fill0_wght400_grad0_opsz24"
            android:title="@string/añadirTarea"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/it_favoritos"
            android:icon="@drawable/star_24dp_e3e3e3_fill0_wght400_grad0_opsz24"
            android:title="Favoritos"
            app:showAsAction="ifRoom" />
    </group>
    <group android:id="@+id/it_groupMasOpciones">
        <item
            android:id="@+id/it_acercaDe"
            android:title="@string/Acerca_de" />
        <item
            android:id="@+id/it_salir"
            android:title="@string/salir" />
    </group>
</menu>
