<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/tituloFragmento1"
            android:textColor="@color/texto_input_legible"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:hint="@string/tituloFragmento1"
            android:textColor="@color/texto_input_legible"
            android:textColorHint="@color/texto_hint_legible" />

        <EditText
            android:id="@+id/edtFechaCreacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:clickable="true"
            android:focusable="false"
            android:hint="@string/fechaCreacionfratg1"
            android:textColor="@color/texto_input_legible"
            android:textColorHint="@color/texto_hint_legible" />

        <EditText
            android:id="@+id/edtFechaObjetivo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:clickable="true"
            android:focusable="false"
            android:hint="@string/FerchaObj"
            android:textColor="@color/texto_input_legible"
            android:textColorHint="@color/texto_hint_legible" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/progreso"
            android:textColor="@color/texto_input_legible" />

        <Spinner
            android:id="@+id/spinnerProgreso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:layout_marginBottom="12dp"/>

        <CheckBox
            android:id="@+id/cbPrioritaria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/Prioritaria"
            android:textColor="@color/texto_input_legible" />

        <Button
            android:id="@+id/btnSiguiente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_Guarfar" />

    </LinearLayout>
</ScrollView>
